tests/sumo/cf_model/errors/stepsize2/errors.sumo
Warning: Value of tau=1.00 in vehicle type 'slow' lower than simulation step size may cause collisions.
Warning: Value of tau=1.00 in vehicle type 'DEFAULT_VEHTYPE' lower than simulation step size may cause collisions.
Warning: Teleporting vehicle 'follower'; collision with vehicle 'leader', lane='end_0', gap=-3.75, time=60.00 stage=move.
Warning: Vehicle 'follower' ends teleporting on edge 'rend', time 60.00.
